add mr.bob to buildout for development

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@ parts +=
     omelette
     update_contributions
     themepreview
+    mrbob
     code-analysis
     codeintel
     coverage
@@ -86,6 +87,12 @@ scripts =
 # Usage:
 #
 # ROBOT_CONFIGURE_PACKAGES=plone.app.widgets,ploneorg.core ROBOT_APPLY_PROFILES=ploneorg.core:default ROBOT_INSTALL_PRODUCTS=Products.DateRecurringIndex bin/sphinx-build src/plone.themepreview/source build
+
+[mrbob]
+recipe = zc.recipe.egg
+eggs =
+    mr.bob
+    bobtemplates.plone
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
