Branch for development of Add'on Listings and better security and Release process

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,7 +24,7 @@ package-extras = [test, migration]
 extensions = mr.developer
 
 eggs +=
-    ploneorg.core[migration]
+    ploneorg.core[migration,develop]
     authomatic
     plone.reload
     pas.plugins.authomatic
@@ -43,6 +43,8 @@ auto-checkout +=
     plone.app.vulnerabilities
     ploneorg.migration
     ploneorg.theme
+    ploneorg.addonlisting
+    ploneorg.releasesecurityinfo
     Py-StackExchange
     quintagroup.transmogrifier
     pas.plugins.authomatic
@@ -57,6 +59,8 @@ plone.app.users = git git://github.com/plone/plone.app.users.git pushurl=git@git
 plone.app.vulnerabilities = git git://github.com/plone/plone.app.vulnerabilities.git pushurl=git@github.com:plone/plone.app.vulnerabilities.git
 ploneorg.migration = git git://github.com/collective/ploneorg.migration.git pushurl=git@github.com:collective/ploneorg.migration.git
 ploneorg.theme = git git://github.com/plone/ploneorg.theme.git pushurl=git@github.com:plone/ploneorg.theme.git
+ploneorg.addonlisting = git git://github.com/loechel/ploneorg.addonlisting.git pushurl=git@github.com:loechel/ploneorg.addonlisting.git
+ploneorg.releasesecurityinfo = git git://github.com/loechel/ploneorg.releasesecurityinfo.git pushurl=git@github.com:loechel/ploneorg.releasesecurityinfo.git
 Py-StackExchange = git git://github.com/lucjon/Py-StackExchange.git
 quintagroup.transmogrifier = git git://github.com/collective/quintagroup.transmogrifier.git pushurl=git@github.com:collective/quintagroup.transmogrifier.git branch=plone5
 pas.plugins.authomatic = git git://github.com/collective/pas.plugins.authomatic.git pushurl=git@github.com:collective/pas.plugins.authomatic.git
