--- a/versions.cfg
+++ b/versions.cfg
@@ -40,3 +40,17 @@ wadllib = 1.3.2
 wsgi-intercept = 1.2.2
 mr.bob = 0.1.2
 bobtemplates.plone = 1.0.4
+ipython = 5.0.0
+ipdb = 0.10.1
+# iPython Dependencies
+appnope = 0.1.0
+pexpect = 4.2.0
+pathlib2 = 2.1.0
+backports.shutil-get-terminal-size = 1.0.0
+prompt-toolkit = 1.0.4
+traitlets = 4.2.2
+simplegeneric = 0.8.1
+pickleshare = 0.7.3
+ptyprocess = 0.5.1
+wcwidth = 0.1.7
+ipython-genutils = 0.1.0
