added PDBDebugMode for Development

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,6 +34,8 @@ eggs +=
     collective.isotope
     simplejson
 
+    Products.PDBDebugMode
+
 always-checkout = force
 auto-checkout +=
     collective.badge
