changed buildout for multiple cli-scripts of ploneorg.core and ploneorg.addonlisting

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ extends =
 
 parts +=
     omelette
-    update_contributions
+    cli-scripts
     themepreview
     mrbob
     code-analysis
@@ -74,9 +74,11 @@ eggs =
     ${instance:eggs}
     ${test:eggs}
 
-[update_contributions]
+[cli-scripts]
 recipe = zc.recipe.egg:scripts
-eggs = ploneorg.core
+eggs =
+    ploneorg.core
+    ploneorg.addonlisting
 
 [themepreview]
 recipe = zc.recipe.egg
