extend buildout for ploneorg.releasesecurityinfo package and debug tools

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,14 @@
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-5.0.x.cfg
-    http://dist.plone.org/release/5.1a1/versions.cfg
+#    http://dist.plone.org/release/5.1a1/versions.cfg
+    http://dist.plone.org/release/5.1-latest/versions.cfg
     versions.cfg
 
 parts +=
     omelette
     cli-scripts
+    zopepy
     themepreview
     mrbob
     code-analysis
@@ -95,6 +97,14 @@ scripts =
 # Usage:
 #
 # ROBOT_CONFIGURE_PACKAGES=plone.app.widgets,ploneorg.core ROBOT_APPLY_PROFILES=ploneorg.core:default ROBOT_INSTALL_PRODUCTS=Products.DateRecurringIndex bin/sphinx-build src/plone.themepreview/source build
+
+[zopepy]
+# For more information on this step and configuration options see:
+#
+recipe = zc.recipe.egg
+eggs = ${buildout:eggs}
+interpreter = zopepy
+scripts = zopepy
 
 [mrbob]
 recipe = zc.recipe.egg
