--- a/buildout.cfg
+++ b/buildout.cfg
@@ -56,19 +56,19 @@ auto-checkout +=
 
 [sources]
 collective.badge = git git@github.com:collective/collective.badge.git
-collective.roster = git git://github.com/collective/collective.roster.git pushurl=git@github.com:collective/collective.roster.git
-collective.transmogrifier = git git://github.com/collective/collective.transmogrifier.git pushurl=git@github.com:collective/collective.transmogrifier.git
-collective.workspace = git git://github.com/collective/collective.workspace.git pushurl=git@github.com:collective/collective.workspace.git branch=plone5
-plone.app.users = git git://github.com/plone/plone.app.users.git pushurl=git@github.com:plone/plone.app.users.git
-plone.app.vulnerabilities = git git://github.com/plone/plone.app.vulnerabilities.git pushurl=git@github.com:plone/plone.app.vulnerabilities.git
-ploneorg.migration = git git://github.com/collective/ploneorg.migration.git pushurl=git@github.com:collective/ploneorg.migration.git
-ploneorg.theme = git git://github.com/plone/ploneorg.theme.git pushurl=git@github.com:plone/ploneorg.theme.git
-ploneorg.addonlisting = git git://github.com/loechel/ploneorg.addonlisting.git pushurl=git@github.com:loechel/ploneorg.addonlisting.git
-ploneorg.releasesecurityinfo = git git://github.com/loechel/ploneorg.releasesecurityinfo.git pushurl=git@github.com:loechel/ploneorg.releasesecurityinfo.git
-Py-StackExchange = git git://github.com/lucjon/Py-StackExchange.git
-quintagroup.transmogrifier = git git://github.com/collective/quintagroup.transmogrifier.git pushurl=git@github.com:collective/quintagroup.transmogrifier.git branch=plone5
-pas.plugins.authomatic = git git://github.com/collective/pas.plugins.authomatic.git pushurl=git@github.com:collective/pas.plugins.authomatic.git
-collective.isotope = git git://github.com/collective/collective.isotope.git pushurl=git@github.com:collective/collective.isotope.git
+collective.roster = git https://github.com/collective/collective.roster.git pushurl=git@github.com:collective/collective.roster.git
+collective.transmogrifier = git https://github.com/collective/collective.transmogrifier.git pushurl=git@github.com:collective/collective.transmogrifier.git
+collective.workspace = git https://github.com/collective/collective.workspace.git pushurl=git@github.com:collective/collective.workspace.git branch=plone5
+plone.app.users = git https://github.com/plone/plone.app.users.git pushurl=git@github.com:plone/plone.app.users.git
+plone.app.vulnerabilities = git https://github.com/plone/plone.app.vulnerabilities.git pushurl=git@github.com:plone/plone.app.vulnerabilities.git
+ploneorg.migration = git https://github.com/collective/ploneorg.migration.git pushurl=git@github.com:collective/ploneorg.migration.git
+ploneorg.theme = git https://github.com/plone/ploneorg.theme.git pushurl=git@github.com:plone/ploneorg.theme.git
+ploneorg.addonlisting = git https://github.com/plone/ploneorg.addonlisting.git pushurl=git@github.com:plone/ploneorg.addonlisting.git
+ploneorg.releasesecurityinfo = git https://github.com/plone/ploneorg.releasesecurityinfo.git pushurl=git@github.com:plone/ploneorg.releasesecurityinfo.git
+Py-StackExchange = git https://github.com/lucjon/Py-StackExchange.git
+quintagroup.transmogrifier = git https://github.com/collective/quintagroup.transmogrifier.git pushurl=git@github.com:collective/quintagroup.transmogrifier.git branch=plone5
+pas.plugins.authomatic = git https://github.com/collective/pas.plugins.authomatic.git pushurl=git@github.com:collective/pas.plugins.authomatic.git
+collective.isotope = git https://github.com/collective/collective.isotope.git pushurl=git@github.com:collective/collective.isotope.git
 
 [omelette]
 recipe = collective.recipe.omelette
