pdb mode disabled

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -36,7 +36,7 @@ eggs +=
     collective.isotope
     simplejson
 
-    Products.PDBDebugMode
+#    Products.PDBDebugMode
 
 always-checkout = force
 auto-checkout +=
