specific debug tools for me

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,9 +17,11 @@ parts +=
     runcoverage
 
 # do not let buildout choose any distribution randomly
-allow-picked-versions = false
+allow-picked-versions = true
+show-picked-versions = true
+update-versions-file = versions.cfg
 
-plone-series = 5.0
+plone-series = 5.1
 package-name = ploneorg.core
 package-extras = [test, migration]
 
@@ -35,8 +37,10 @@ eggs +=
     collective.recaptcha
     collective.isotope
     simplejson
+    raven
 
-#    Products.PDBDebugMode
+    pdbpp
+    Products.PDBDebugMode
 
 always-checkout = force
 auto-checkout +=
@@ -69,6 +73,18 @@ Py-StackExchange = git https://github.com/lucjon/Py-StackExchange.git
 quintagroup.transmogrifier = git https://github.com/collective/quintagroup.transmogrifier.git pushurl=git@github.com:collective/quintagroup.transmogrifier.git branch=plone5
 pas.plugins.authomatic = git https://github.com/collective/pas.plugins.authomatic.git pushurl=git@github.com:collective/pas.plugins.authomatic.git
 collective.isotope = git https://github.com/collective/collective.isotope.git pushurl=git@github.com:collective/collective.isotope.git
+
+[instance]
+event-log-custom =
+    %import raven.contrib.zope
+    <logfile>
+      path ${buildout:directory}/var/log/instance.log
+      level INFO
+    </logfile>
+    <sentry>
+      dsn https://75b1a7aebce7404c8a467b25b608a9e5:439368748d494f07b9e86b09419dc753@sentry.io/128640
+      level WARN
+    </sentry>
 
 [omelette]
 recipe = collective.recipe.omelette
